--- a/non_linear_linear_Hybrid_Mode.ipynb
+++ b/non_linear_linear_Hybrid_Mode.ipynb
@@ -5,10 +5,6 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "collapsed_sections": [
-        "fR1612VuLbmx",
-        "W0RGvzp4QmkO"
-      ],
       "include_colab_link": true
     },
     "kernelspec": {
@@ -97,7 +93,7 @@
       "cell_type": "code",
       "source": [
         "url_1 = \"https://raw.githubusercontent.com/metsumesquita/master_degree_UPE/main/Datasets/sunspot.csv\"\n",
-        "sunpot_data = pd.read_csv(url_1)\n",
+        "sunspot_data= pd.read_csv(url_1)\n",
         "\n",
         "url_2= \"https://raw.githubusercontent.com/metsumesquita/master_degree_UPE//main/Datasets/US-UK.csv\"\n",
         "exchange_data= pd.read_csv(url_2)\n",
@@ -853,7 +849,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#sunpot\n",
+        "#sunspot\n",
         "####The sunspot data considered in this paper include the annual number ofsunspot from 1700 to 1987"
       ],
       "metadata": {
@@ -863,9 +859,8 @@
     {
       "cell_type": "code",
       "source": [
-        "#sunpot\n",
         "print(\"primeiros anos registrados\")\n",
-        "sunpot_data.head()"
+        "sunspot_data.head()"
       ],
       "metadata": {
         "id": "Xoz6ZOlFoox6",
@@ -1174,7 +1169,7 @@
       "cell_type": "code",
       "source": [
         "print(\"ultimos anos registrados\")\n",
-        "sunpot_data.tail()"
+        "sunspot_data.tail()"
       ],
       "metadata": {
         "colab": {
@@ -1481,7 +1476,7 @@
     {
       "cell_type": "code",
       "source": [
-        "sunpot_data.info()"
+        "sunspot_data.info()"
       ],
       "metadata": {
         "id": "cyUWsnTCsuwR",
@@ -1512,8 +1507,8 @@
     {
       "cell_type": "code",
       "source": [
-        "print(sunpot_data.index)\n",
-        "print(type(sunpot_data.index))"
+        "print(sunspot_data.index)\n",
+        "print(type(sunspot_data.index))"
       ],
       "metadata": {
         "id": "GUbUdzdJpGa1",
@@ -1538,17 +1533,17 @@
       "cell_type": "code",
       "source": [
         "# Converter a coluna 'year' para datetime no formato de ano\n",
-        "sunpot_data[\"year\"] = pd.to_datetime(sunpot_data[\"year\"], format=\"%Y\", errors='coerce')\n",
+        "sunspot_data[\"year\"] = pd.to_datetime(sunspot_data[\"year\"], format=\"%Y\", errors='coerce')\n",
         "\n",
         "# Definir 'year' como índice\n",
-        "sunpot_data.set_index(\"year\", inplace=True)\n",
+        "sunspot_data.set_index(\"year\", inplace=True)\n",
         "\n",
         "# Garantir que o índice seja datetime (Timestamp), não Period\n",
-        "if isinstance(sunpot_data.index, pd.PeriodIndex):\n",
-        "    sunpot_data.index = sunpot_data.index.to_timestamp()\n",
+        "if isinstance(sunspot_data.index, pd.PeriodIndex):\n",
+        "    sunspot_dataindex = sunspot_data.index.to_timestamp()\n",
         "\n",
         "# Ordenar os dados por data (boa prática)\n",
-        "sunpot_data = sunpot_data.sort_index()\n"
+        "sunspot_data = sunspot_data.sort_index()\n"
       ],
       "metadata": {
         "id": "WPf7j-snK79L"
@@ -1560,7 +1555,7 @@
       "cell_type": "code",
       "source": [
         "plt.figure(figsize=(18, 4)) # Create the first figure\n",
-        "plt.plot(sunpot_data.index, sunpot_data[\"value\"], label='Sunspot values') # Plot sunspot data\n",
+        "plt.plot(sunspot_data.index, sunspot_data[\"value\"], label='Sunspot values') # Plot sunspot data\n",
         "\n",
         "# Correct title for the sunspot plot\n",
         "plt.title(\"Sunspot activity (1700 - 1988)\", fontsize=16, fontweight='bold')\n",
@@ -2779,7 +2774,7 @@
     {
       "cell_type": "code",
       "source": [
-        "gerar_graficos_temporais(sunpot_data, \"Sunspot activity  - Original\")"
+        "gerar_graficos_temporais(sunspot_data, \"Sunspot activity  - Original\")"
       ],
       "metadata": {
         "colab": {
@@ -2930,7 +2925,7 @@
         "\n",
         "    # Annual data. If looking for the ~11-year cycle, `seasonal_decompose` can use that.\n",
         "    # If no \"within-year\" seasonality is expected, set to None.\n",
-        "    {\"name\": \"Sunspot Activity\", \"df\": sunpot_data, \"value_col\": \"value\", \"seasonal_period\": 12}, # Approx 11-year cycle\n",
+        "    {\"name\": \"Sunspot Activity\", \"df\": sunspot_data, \"value_col\": \"value\", \"seasonal_period\": 12}, # Approx 11-year cycle\n",
         "\n",
         "    # Annual data. Lynx cycles are around 9-10 years.\n",
         "    # If no \"within-year\" seasonality is expected, set to None.\n",
@@ -3108,12 +3103,12 @@
         "train_sunspot_data = sunspot_data.loc['1701':'1920']\n",
         "train_lynx_data = lynx_data.loc['1821':'1920']\n",
         "train_exchangerate_data=exchange_data.loc['1980':'1992'] #weekly\n",
-        "train_nikkie225_data=nikkei_data.loc['2006/03/06':'2009/06/05']\n",
+        "train_nikkie225_data=nikkei225_data.loc['2006/03/06':'2009/06/05']\n",
         "\n",
         "test_sunspot_data = sunspot_data.loc['1921':'1987']\n",
         "test_lynx_data = lynx_data.loc['1921':'1934']\n",
         "test_exchangerate_data=exchange_data.loc['1993']\n",
-        "test_nikkie225_data=nikkei_data.loc['2009/06/06':'2010/04/01']\n"
+        "test_nikkie225_data=nikkei225_data.loc['2009/06/06':'2010/04/01']\n"
       ],
       "metadata": {
         "id": "HTuBjVUhMbNH"
@@ -3554,7 +3549,7 @@
         "\n",
         "# Dicionário com os tamanhos de janela para cada dataset\n",
         "window_sizes = {\n",
-        "    \"sunpot\": 10,  # ajuste conforme necessário\n",
+        "    \"sunspot\": 10,  # ajuste conforme necessário\n",
         "    \"lynx\": 10,    # ajuste conforme necessário\n",
         "    \"exchangerate\": 10,  # ajuste conforme necessário\n",
         "    \"nikkei225\": 10  # ajuste conforme necessário\n",
@@ -3592,14 +3587,14 @@
         "    print(f\"Train windows shape: {train_windows.shape}\")\n",
         "    print(f\"Test windows shape: {test_windows.shape}\")\n",
         "\n",
-        "# Exemplo de como acessar os dados do sunpot:\n",
-        "print(\"\\nExemplo de acesso aos dados do sunpot:\")\n",
-        "print(\"X_train_sunpot shape:\", X_train_sunpot.shape)\n",
-        "print(\"y_train_sunpot shape:\", y_train_sunpot.shape)\n",
-        "print(\"X_test_sunpot shape:\", X_test_sunpot.shape)\n",
-        "print(\"y_test_sunpot shape:\", y_test_sunpot.shape)\n",
-        "print(\"windows_train_sunpot shape:\", windows_train_sunpot.shape)\n",
-        "print(\"windows_test_sunpot shape:\", windows_test_sunpot.shape)"
+        "# Exemplo de como acessar os dados do sunspot:\n",
+        "print(\"\\nExemplo de acesso aos dados do sunspot:\")\n",
+        "print(\"X_train_sunspot shape:\", X_train_sunspot.shape)\n",
+        "print(\"y_train_sunspot shape:\", y_train_sunspot.shape)\n",
+        "print(\"X_test_sunspot shape:\", X_test_sunspot.shape)\n",
+        "print(\"y_test_sunspot shape:\", y_test_sunspot.shape)\n",
+        "print(\"windows_train_sunspot shape:\", windows_train_sunspot.shape)\n",
+        "print(\"windows_test_sunspot shape:\", windows_test_sunspot.shape)"
       ],
       "metadata": {
         "id": "U5pkfgLIaBF9"
